extremum-gpx-animator-deploy.yaml
# Kubernetes Deployment Manifest for Application
#
# PREREQUISITES:
# - cert-manager installed and configured
# - ingress-nginx-controller deployed
#
# ENVIRONMENT VARIABLE CONFIGURATION:
# 1. Replace TELEGRAM_BOT_API_TOKEN with your actual Telegram bot token
# 2. Update all occurrences of 'extremum.site' with your custom hostname
#    (must resolve to the IP address of the ingress server where the microapp will be hosted)

# Example of how to apply the manifest:
# kubectl apply -f application-deployment.yaml

# NOTE: Ensure that DNS records are properly configured for your chosen hostname
# before deploying the application to avoid connectivity issues.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extremum-gpxbot-deployment
  namespace: extremum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extremum-gpxbot
  template:
    metadata:
      labels:
        app: extremum-gpxbot
    spec:
      containers:
      - name: extremum
        image: mufularoh/extremum-tools:gpxbot
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.json
          subPath: config.json
        - name: files-volume
          mountPath: /app/files
        ports:
          - name: gpxbot
            containerPort: 5000
            protocol: TCP

      - name: cleaner
        image: alpine:3.20
        command: ["/bin/sh", "-c"]
        args:
          - |
            while true; do
              find /app/files -type f -mmin +120 -delete
              sleep 3600
            done
        volumeMounts:
        - name: files-volume
          mountPath: /app/files

      volumes:
      - name: config-volume
        configMap:
          name: extremum-config
      - name: files-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: gpxbot-service
  namespace: extremum
  labels:
    app: extremum-gpxbot
spec:
  ports:
    - name: http-query
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: extremum-gpxbot

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpxbot-ingress
  namespace: extremum
  labels:
    app: gpxbot-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: gpxbot-service
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - extremum.site
      secretName: extremum-tls
  rules:
  - host: extremum.site
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gpxbot-service
              port:
                number: 5000
